@@ -1,3 +1,8 @@
+Tue Feb 08 18:18:18 2005  George Lebl <jirka@5z.com>
+
+	* src/graphing.c: deal with closing of the graph window when we're
+	  in the middle of plotting without crashing
+
 Thu Jan 06 13:28:12 2005  George Lebl <jirka@5z.com>
 
 	* lib/functions/elementary.gel: add NewtonsMethodPoly
